--- a/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/validators.zh_CN.yml
+++ b/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/validators.zh_CN.yml
@@ -2,7 +2,7 @@ An identifier attribute already exists.: 标识符属性已存在。
 Attribute code may contain only letters, numbers and underscore: 属性代码只能包含字母、数字和下划线
 Attribute code may contain only letters (at least one), numbers and underscores: 属性代码只能包含字母（至少 1 个）、数字和下划线
 Attribute code may not contain line-feed characters: 属性代码不能包含换行字符
-Attribute group code may contain only letters, numbers and underscores: 属性代码只能包含字母（至少 1 个）、数字和下划线
+Attribute group code may contain only letters, numbers and underscores: 属性组代码只能包含字母、数字和下划线
 This attribute type can't be used as a grid filter: 此属性类型不能用作网格筛选器
 This code is not available: 此代码不可用
 This attribute type must be required: 此属性类型为必填项
@@ -10,10 +10,10 @@ This attribute type can't be required: 此属性类型非必填项
 This attribute type can't have unique value: 此属性类型的值非唯一
 No default value may be specified for this attribute type: 此属性类型没有指定的默认值
 This value should be Yes or No: 此值应为 Yes 或 No
-This value should not be blank: 此值不能为空
+This value should not be blank: 该值不应为空
 Option code may contain only letters, numbers and underscores: 选项代码仅可包含字母、数字和下划线
 Option code may contain only letters (at least one), numbers and underscores: 选项代码仅可包含字母（至少 1 个）、数字和下划线
-This value should not be a decimal.: 该值不应该为小数
+This value should not be a decimal.: 该值不应为小数。
 'The file extension is not allowed (allowed extensions: %extensions%).': '不允许的文件扩展名 (允许的扩展名︰ %extensions%)。'
 "The value %value% is already set on another product for the unique attribute %attribute%": 值 %value% 已经设置为另一个产品的唯一属性 %attribute%
 The same identifier is already set on another product: 已在另一产品上设置了同一标识符
@@ -40,7 +40,6 @@ pim_catalog:
     can_have_family_variant_unexpected_attribute: '无法为此实体设置属性"%attribute%"，因为其不属于属性集'
     cannot_have_product_model_as_parent: '产品模型"%product_model%"不能将产品模型"%parent_product_model%"作为父模型'
     cannot_have_parent: '产品模型“%product_model%”不能有父模型'
-    attribute_does_not_belong_to_family: '属性"%attribute%"不属于品类"%family%'
     variant_product_invalid_family: '变型产品品类必须与其父类相同'
     php_int_max_reached: '最大数值必须小于 %php_int_max%。'
     not_null_family: 品类不能为“空 (null)”，因为具有标识符"%sku%"的产品是变型产品。
@@ -61,7 +60,7 @@ pim_catalog:
     family_variant_no_level: 品类变型中应至少有一个级别
     family_variant_maximum_number_of_level: 品类变型的级别不能超过"%level%"个
     family_variant_unique_attributes_in_last_level: 唯一的属性“%attribute%”必须在产品级别上设置
-    product_identifier: 这些标识符"%s"并不存在。
+    product_identifier: 这些标识符"%s"不存在。
     0: 发生意外错误。
     100: 非预期的值
     101: 此字段需要填入布尔值。
