--- a/src/Akeneo/Tool/Bundle/MeasureBundle/Resources/translations/jsmessages.zh_CN.yml
+++ b/src/Akeneo/Tool/Bundle/MeasureBundle/Resources/translations/jsmessages.zh_CN.yml
@@ -16,18 +16,18 @@ pim_measure:
     Volume: 体积
     Weight: 重量
     Pressure: 压力
-    Energy: 能源
+    Energy: 能量
     CaseBox: 包装
   units:
     #Area
     ACRE: 英亩
     ARE: 公亩
-    ARPENT: 英亩
+    ARPENT: 阿邪
     CENTIARE: 平方米
     HECTARE: 公顷
     SQUARE_CENTIMETER: 平方厘米
     SQUARE_DECIMETER: 平方分米
-    SQUARE_DEKAMETER: 平方分米
+    SQUARE_DEKAMETER: 平方十米
     SQUARE_FOOT: 平方英尺
     SQUARE_FURLONG: 方形弗隆
     SQUARE_HECTOMETER: 平方百米
@@ -117,8 +117,8 @@ pim_measure:
     HOUR: 小时
     DAY: 天
     WEEK: 星期
-    MONTH: 月份
-    YEAR: 年份
+    MONTH: 月
+    YEAR: 年
     #Speed
     FOOT_PER_SECOND: 英尺/秒
     FOOT_PER_HOUR: 英尺/小时
@@ -168,7 +168,7 @@ pim_measure:
     MILLIBAR: 毫巴
     ATM: 大气压
     PSI: 磅 / 平方英寸
-    TORR: 托尔
+    TORR: 托
     MMHG: 毫米汞柱
     #Energy
     CALORIE: 卡路里
@@ -177,4 +177,4 @@ pim_measure:
     KILOJOULE: 千焦
     #CaseBox
     PIECE: 个
-    DOZEN: 一打
+    DOZEN: 打
