--- a/src/Akeneo/Platform/Bundle/DashboardBundle/Resources/translations/messages.zh_CN.yml
+++ b/src/Akeneo/Platform/Bundle/DashboardBundle/Resources/translations/messages.zh_CN.yml
@@ -3,7 +3,7 @@ pim_dashboard:
   version: 版本
   widget:
     completeness:
-      title: 数据在渠道与区域上的完成度
+      title: 在渠道与区域上的完成度
     last_operations:
       title: 最近的一些操作
       status: 状态
