--- a/src/Akeneo/Platform/Bundle/ImportExportBundle/Resources/translations/jsmessages.zh_CN.yml
+++ b/src/Akeneo/Platform/Bundle/ImportExportBundle/Resources/translations/jsmessages.zh_CN.yml
@@ -59,13 +59,13 @@ pim_import_export:
         warning: 警告
         header.step: 步骤
         header.warnings: 警告
-        header.summary: 总结
+        header.summary: 摘要
         header.start: 开始
         header.end: 结束
     job_instance:
       fail:
-        launch: 无法启动作业配置文件。请确保其有效性以及您拥有启动权限。
-        save: 无法保存作业配置文件。请确保您有权限编辑它。
+        launch: 启动作业配置文件失败。请确保其有效且您拥有启动权限。
+        save: 保存作业配置文件失败。请确保您有编辑权限。
       button:
         export.title: 立即导出
         import.launch: 立即导入
@@ -125,7 +125,7 @@ pim_import_export:
             help: 是否启用导入的产品
           enabled_comparison:
             title: 比对值
-            help: 开启原始值与导入值的比较。如果导入值与原始值比较接近，可以加快导入速度。
+            help: 开启原始值与导入值的比较。如果导入值与原始值比较接近，可以加快导入速度
           real_time_versioning:
             title: 实时历史记录更新
             help: 自动更新产品的历史记录，可将其关闭以提高性能
@@ -136,7 +136,7 @@ pim_import_export:
     last_operations:
       empty: 未找到操作
       date: 日期
-      profile_name: 配置方案名称
+      profile_name: 配置文件名称
       details: 详细信息
       warning_count: 警告
       job_type:
@@ -149,14 +149,14 @@ pim_import_export:
         compute_family_variant_structure_changes: 计算品类变型结构变化
         compute_completeness_of_products_family: 计算产品品类的完成度
         mass_delete: 批量删除产品
-      header.view_all: 显示所有
+      header.view_all: 查看全部
   batch_status:
     1: 已完成
     2: 正在启动
     3: 已启动
     4: 正在停止
     5: 已停止
-    6: 已失败
+    6: 失败
     7: 已放弃
     8: 未知
 confirmation:
@@ -172,22 +172,22 @@ pim_enrich:
           confirm: 确定要删除此导入配置文件吗？
       flash:
         delete:
-          success: 成功移除导入配置文件
+          success: 导入配置文件已成功移除
     export_profile:
       module:
         delete:
           confirm: 确定要删除此导出配置文件吗？
       flash:
         delete:
-          success: 成功移除导出配置文件
+          success: 导出配置文件已成功移除
 pim_title:
   pim_importexport_export_profile_index: 导出配置文件管理
-  pim_importexport_export_profile_edit: 导出配置文件 {{ job.label }} |编辑
+  pim_importexport_export_profile_edit: 导出配置文件 {{ job.label }} | 编辑
   pim_importexport_export_profile_show: 导出配置文件 {{ job.label }} |显示
   pim_importexport_export_execution_index: 导出执行历史记录
   pim_importexport_export_execution_show: 导出执行|详细信息
   pim_importexport_import_profile_index: 导入配置文件管理
-  pim_importexport_import_profile_edit: 导入配置文件 {{ job.label }} |编辑
+  pim_importexport_import_profile_edit: 导入配置文件 {{ job.label }} | 编辑
   pim_importexport_import_profile_show: 导入配置文件 {{ job.label }} |显示
   pim_importexport_import_execution_index: 导入执行历史记录
   pim_importexport_import_execution_show: 导入执行|详细信息
