--- a/src/Akeneo/UserManagement/Bundle/Resources/translations/messages.zh_CN.yml
+++ b/src/Akeneo/UserManagement/Bundle/Resources/translations/messages.zh_CN.yml
@@ -49,7 +49,7 @@ pim_user:
         wrong: 密码错误
     tabs:
       general:
-        title: 一般信息
+        title: 常规​​​​​
         basic_information: 基本信息
         contact_information: 联系信息
       additional:
@@ -76,12 +76,12 @@ pim_user:
       homepage: 转到主页
   group:
     tab:
-      general.title: 一般信息
+      general.title: 常规​​​​​
       users.title: 用户
   roles:
     title: 角色
     tab:
-      general: 一般信息
+      general: 常规​​​​​
       action: 权限
       users: 用户
   controller:
