--- a/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/jsmessages.en_US.yml
+++ b/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/jsmessages.en_US.yml
@@ -32,6 +32,9 @@ pim_enrich.entity.product:
             fail: No attribute is configured as a product identifier or you don't have the rights to edit it.
     page_title:
         index: "]-Inf, 1]{{ count }} result|]1, Inf[{{ count }} results"
+        product: "]-Inf, 1]{{ count }} product|]1, Inf[{{ count }} products"
+        product_model: "]-Inf, 1]{{ count }} product model|]1, Inf[{{ count }} product models"
+        grid: "{{ productCount }}, {{ productModelCount }}"
     module:
         create:
             subtitle: Create product
