PM2020-22: do not display count if 0

--- a/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/jsmessages.en_US.yml
+++ b/src/Akeneo/Pim/Enrichment/Bundle/Resources/translations/jsmessages.en_US.yml
@@ -34,7 +34,7 @@ pim_enrich.entity.product:
         index: "]-Inf, 1]{{ count }} result|]1, Inf[{{ count }} results"
         product: "]-Inf, 1]{{ count }} product|]1, Inf[{{ count }} products"
         product_model: "]-Inf, 1]{{ count }} product model|]1, Inf[{{ count }} product models"
-        grid: "{{ productCount }}, {{ productModelCount }}"
+        product_and_product_model: "{{ productCount }}, {{ productModelCount }}"
     module:
         create:
             subtitle: Create product
